# isbh

./: .gitignore  CMakeLists.txt  LICENSE  skrypt.py
feeds/: .gitignore  feed1
feeds/22_100_3/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_100_5/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_40_5/: 10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_50_0/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_50_5/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_60_5/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_70_5/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_80_5/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
feeds/22_90_5/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
przybliżony/: ISBHHH.sln
przybliżony/ISBHHH/: 1.in  Algorytm.cs  CrossOligos.cs  ISBHHH.cs  ISBHHH.csproj  Kontener.cs  Oligo.cs
src/: DnaAssembler.cpp  DnaAssembler.hpp  GraphCreator.cpp  GraphCreator.hpp  GraphElements.cpp  GraphElements.hpp  Oligo.cpp  Oligo.hpp  main.cpp  utils.hpp
src_p/: GraphCreator.cpp  GraphCreator.hpp  GraphElements.hpp  Oligo.hpp  PrepareData.cpp  PrepareData.h  Project6.vcxproj  Project6.vcxproj.filters  main.cpp  utils.cpp  utils.hpp
tests/: tests.cpp
utils/: feed1  grade_result.py  make_sequence_file.py  measure.py  test_assemblation.py
